--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jest": "^24.9.0"
   },
   "dependencies": {
-    "immutable": "^4.0.0-rc.12"
+    "immutable": "^4.0.0-rc.12",
+    "ramda": "^0.26.1"
   }
 }
